--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/owfont-regular.css" rel="stylesheet" type="text/css">
+    <link href="css/owfont-regular.min.css" rel="stylesheet" type="text/css">
     <title>Weather App</title>
 </head>
 <body>
