--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/owfont-regular.min.css" rel="stylesheet" type="text/css">
-    <title>Weather App</title>
+    <script src="https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.js"></script>
+    <link href="https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.css" rel="stylesheet" />
 </head>
 <body>
+<!-- <div id='map'></div> -->
     <script src="bundle.js"></script>
 </body>
 </html>
